--- a/package.json
+++ b/package.json
@@ -12,28 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/cdk": "5.2.5",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/router": "5.2.10",
+    "@angular/animations": "7.1.1",
+    "@angular/cdk": "7.1.1",
+    "@angular/common": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/core": "7.1.1",
+    "@angular/forms": "7.1.1",
+    "@angular/http": "7.1.1",
+    "@angular/material": "^7.1.1",
+    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/router": "7.1.1",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
-    "rxjs": "^5.5.10",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.26",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.4",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/language-service": "5.2.10",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.1",
+    "@angular/compiler-cli": "7.1.1",
+    "@angular/language-service": "7.1.1",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -49,6 +52,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.6.2"
+    "typescript": "3.1.6"
   }
 }
